--- a/languages/ip-geo-block-ja.po
+++ b/languages/ip-geo-block-ja.po
@@ -2,10 +2,10 @@
 # This file is distributed under the same license as the IP Geo Block package.
 msgid ""
 msgstr ""
-"Project-Id-Version: IP Geo Block 1.1.1\n"
+"Project-Id-Version: IP Geo Block 1.2.0\n"
 "Report-Msgid-Bugs-To: https://github.com/tokkonopapa/WordPress-IP-Geo-Block\n"
-"POT-Creation-Date: 2014-09-14 14:20+0900\n"
-"PO-Revision-Date: 2014-09-14 14:29+0900\n"
+"POT-Creation-Date: 2014-10-12 13:23+0900\n"
+"PO-Revision-Date: 2014-10-12 13:33+0900\n"
 "Last-Translator: tokkonopapa <tokkonopapa@yahoo.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -23,211 +23,42 @@ msgstr ""
 msgid "It will block any spam comments posted from undesired countries."
 msgstr "望まない国からの投稿をブロックするプラグインです。"
 
-#: admin/class-ip-geo-block-admin.php:85
+#: admin/class-ip-geo-block-admin.php:82
 msgid "You need WordPress 3.5+"
 msgstr "WordPress 3.5以上が必要です"
 
-#: admin/class-ip-geo-block-admin.php:149
-#: admin/class-ip-geo-block-admin.php:202
+#: admin/class-ip-geo-block-admin.php:145
+#: admin/class-ip-geo-block-admin.php:197
 msgid "Settings"
 msgstr "設定"
 
-#: admin/class-ip-geo-block-admin.php:163
+#: admin/class-ip-geo-block-admin.php:159
 msgid "Contribute on GitHub"
-msgstr "GitHubで開発に参加"
+msgstr "GitHubでの開発に参加"
 
-#: admin/class-ip-geo-block-admin.php:181
-#: admin/class-ip-geo-block-admin.php:182
+#: admin/class-ip-geo-block-admin.php:177
+#: admin/class-ip-geo-block-admin.php:178
 msgid "IP Geo Block"
 msgstr "IP Geo Block"
 
-#: admin/class-ip-geo-block-admin.php:203
+#: admin/class-ip-geo-block-admin.php:198
 msgid "Statistics"
 msgstr "統計"
 
-#: admin/class-ip-geo-block-admin.php:204
+#: admin/class-ip-geo-block-admin.php:199
 msgid "Search"
 msgstr "検索"
 
-#: admin/class-ip-geo-block-admin.php:205
+#: admin/class-ip-geo-block-admin.php:200
 msgid "Attribution"
 msgstr "リンク"
 
-#: admin/class-ip-geo-block-admin.php:276
-msgid "Geolocation service settings"
-msgstr "位置情報サービスの設定"
-
-#: admin/class-ip-geo-block-admin.php:296
-msgid "Selection and API key settings"
-msgstr "サービスの選択とAPIキーの設定"
-
-#: admin/class-ip-geo-block-admin.php:316
-msgid "Submission settings"
-msgstr "投稿時の設定"
-
-#: admin/class-ip-geo-block-admin.php:324
-msgid "Text message on comment form"
-msgstr "投稿フォーム上のテキスト・メッセージ"
-
-#: admin/class-ip-geo-block-admin.php:334
-msgid "None"
-msgstr "なし"
-
-#: admin/class-ip-geo-block-admin.php:335
-msgid "Top"
-msgstr "上部"
-
-#: admin/class-ip-geo-block-admin.php:336
-msgid "Bottom"
-msgstr "下部"
-
-#: admin/class-ip-geo-block-admin.php:345
-msgid "Matching rule"
-msgstr "マッチング規則"
-
-#: admin/class-ip-geo-block-admin.php:355
-msgid "White list"
-msgstr "ホワイトリスト"
-
-#: admin/class-ip-geo-block-admin.php:356
-msgid "Black list"
-msgstr "ブラックリスト"
-
-#: admin/class-ip-geo-block-admin.php:364
-#, php-format
-msgid "White list %s"
-msgstr "ホワイトリスト %s"
-
-#: admin/class-ip-geo-block-admin.php:373
-#: admin/class-ip-geo-block-admin.php:389
-msgid "(comma separated)"
-msgstr "（カンマ区切り）"
-
-#: admin/class-ip-geo-block-admin.php:380
-#, php-format
-msgid "Black list %s"
-msgstr "ブラックリスト %s"
-
-#: admin/class-ip-geo-block-admin.php:396
-#, php-format
-msgid "Response code %s"
-msgstr "レスポンスコード %s"
-
-#: admin/class-ip-geo-block-admin.php:428
-msgid "Cache settings"
-msgstr "キャッシュの設定"
-
-#: admin/class-ip-geo-block-admin.php:436
-msgid "Number of entries"
-msgstr "最大保持数"
-
-#: admin/class-ip-geo-block-admin.php:451
-msgid "Expiration time [sec]"
-msgstr "有効時間 [sec]"
-
-#: admin/class-ip-geo-block-admin.php:469
-msgid "Plugin settings"
-msgstr "プラグインの設定"
-
-#: admin/class-ip-geo-block-admin.php:477
-msgid "Save statistics"
-msgstr "統計情報を記録"
-
-#: admin/class-ip-geo-block-admin.php:492
-msgid "Remove settings at uninstallation"
-msgstr "アンインストール時に設定を削除"
-
-#: admin/class-ip-geo-block-admin.php:521
-msgid "Statistics of posts"
-msgstr "投稿の統計"
-
-#: admin/class-ip-geo-block-admin.php:529
-msgid "Passed"
-msgstr "通過"
-
-#: admin/class-ip-geo-block-admin.php:544
-msgid "Blocked"
-msgstr "遮断"
-
-#: admin/class-ip-geo-block-admin.php:559
-msgid "Unknown (passed)"
-msgstr "国コード不明（通過）"
-
-#: admin/class-ip-geo-block-admin.php:580
-msgid "Blocked by countries"
-msgstr "国別遮断回数"
-
-#: admin/class-ip-geo-block-admin.php:595
-msgid "Blocked by type of IP address"
-msgstr "遮断したIPアドレスのタイプ"
-
-#: admin/class-ip-geo-block-admin.php:612
-msgid "Service"
-msgstr "サービス"
-
-#: admin/class-ip-geo-block-admin.php:613
-msgid "Calls"
-msgstr "リクエスト回数"
-
-#: admin/class-ip-geo-block-admin.php:614
-msgid "Response [msec]"
-msgstr "応答時間 [msec]"
-
-#: admin/class-ip-geo-block-admin.php:627
-msgid "Average response time of each service"
-msgstr "サービス毎の平均応答時間"
-
-#: admin/class-ip-geo-block-admin.php:641
-#: admin/class-ip-geo-block-admin.php:745
-msgid "IP address"
-msgstr "IPアドレス"
-
-#: admin/class-ip-geo-block-admin.php:642
-msgid "Country code"
-msgstr "国コード"
-
-#: admin/class-ip-geo-block-admin.php:643
-msgid "Elapsed [sec] / Calls"
-msgstr "経過時間 [sec] / 回数"
-
-#: admin/class-ip-geo-block-admin.php:661
-msgid "IP address in cache"
-msgstr "キャッシュ中のIPアドレス"
-
-#: admin/class-ip-geo-block-admin.php:676
-msgid "Clear statistics"
-msgstr "統計のクリア"
-
-#: admin/class-ip-geo-block-admin.php:684
-msgid "Clear now"
-msgstr "今すぐクリア"
-
-#: admin/class-ip-geo-block-admin.php:709
-msgid "Search IP address geolocation"
-msgstr "IPアドレスの位置情報を検索"
-
-#: admin/class-ip-geo-block-admin.php:729
-msgid "Geolocation service"
-msgstr "位置情報サービス"
-
-#: admin/class-ip-geo-block-admin.php:760
-msgid "Find geolocation"
-msgstr "位置情報の検索"
-
-#: admin/class-ip-geo-block-admin.php:768
-msgid "Search now"
-msgstr "今すぐ検索"
-
-#: admin/class-ip-geo-block-admin.php:789
-msgid "Attribution links"
-msgstr "サービスの提供元"
-
-#: admin/class-ip-geo-block-admin.php:820
+#: admin/class-ip-geo-block-admin.php:266
 msgid "Thanks for providing these great services for free."
 msgstr ""
 "すばらしいサービスの提供元である以下のサイトに、敬意と感謝の意を表します！"
 
-#: admin/class-ip-geo-block-admin.php:821
+#: admin/class-ip-geo-block-admin.php:267
 msgid ""
 "(Most browsers will redirect you to each site without referrer when you "
 "click the link.)"
@@ -235,14 +66,249 @@ msgstr ""
 "（ほとんどのブラウザでは、リンクをクリックしても参照元を残さずに各サイトにリ"
 "ダイレクトできます。）"
 
-#: admin/class-ip-geo-block-admin.php:893
+#: admin/class-ip-geo-block-admin.php:338
 msgid "Enable"
 msgstr "有効"
 
-#: admin/class-ip-geo-block-admin.php:924
+#: admin/class-ip-geo-block-admin.php:369
 msgid "successfully updated"
 msgstr "更新に成功しました"
 
-#: classes/class-ip-geo-block.php:422
-msgid "Sorry, your comment cannot be accepted."
-msgstr "申し訳ありませんが、投稿できません。"
+#: admin/includes/tab-attribution.php:16
+msgid "Attribution links"
+msgstr "APIサービスの提供元"
+
+#: admin/includes/tab-geolocation.php:20
+msgid "Search IP address geolocation"
+msgstr "IPアドレスの位置情報を検索"
+
+#: admin/includes/tab-geolocation.php:40
+msgid "Geolocation service"
+msgstr "位置情報サービス"
+
+#: admin/includes/tab-geolocation.php:56 admin/includes/tab-statistics.php:150
+msgid "IP address"
+msgstr "IPアドレス"
+
+#: admin/includes/tab-geolocation.php:71
+msgid "Find geolocation"
+msgstr "位置情報の検索"
+
+#: admin/includes/tab-geolocation.php:79
+msgid "Search now"
+msgstr "今すぐ検索"
+
+#: admin/includes/tab-settings.php:43
+msgid "Geolocation API settings"
+msgstr "位置情報APIの設定"
+
+#: admin/includes/tab-settings.php:63
+msgid "API selection and key settings"
+msgstr "APIの選択とキーの設定"
+
+#: admin/includes/tab-settings.php:83
+msgid "Validation settings"
+msgstr "検証の設定"
+
+#: admin/includes/tab-settings.php:91
+msgid "<dfn title=\"Validate at wp-comments-post.php\">Comments post</dfn>"
+msgstr ""
+"<dfn title=\"wp-comments-post.phpがアクセスされた時に検証する\">コメント投稿"
+"</dfn>"
+
+#: admin/includes/tab-settings.php:106
+msgid "<dfn title=\"Validate at wp-login.php\">Access to login</dfn>"
+msgstr ""
+"<dfn title=\"wp-login.phpがアクセスされた時に検証する\">ログインへのアクセス"
+"</dfn>"
+
+#: admin/includes/tab-settings.php:121
+msgid ""
+"<dfn title=\"Validate at wp-admin/admin.php\">Access to admin (except ajax)</"
+"dfn>"
+msgstr ""
+"<dfn title=\"wp-admin/admin.phpがアクセスされた時に検証する\">管理領域へのア"
+"クセス（ajaxを除く）</dfn>"
+
+#: admin/includes/tab-settings.php:140
+msgid "Maxmind GeoLite settings"
+msgstr "Maxmind GeoLiteの設定"
+
+#: admin/includes/tab-settings.php:148
+msgid "Path to database (IPv4)"
+msgstr "データベースへのパス（IPv4）"
+
+#: admin/includes/tab-settings.php:161 admin/includes/tab-settings.php:182
+#: includes/download.php:129
+#, php-format
+msgid "Last update: %s"
+msgstr "最終更新：%s"
+
+#: admin/includes/tab-settings.php:169
+msgid "Path to database (IPv6)"
+msgstr "データベースへのパス（IPv6）"
+
+#: admin/includes/tab-settings.php:191
+msgid "Download database"
+msgstr "データベースのダウンロード"
+
+#: admin/includes/tab-settings.php:199
+msgid "Download from Maxmind"
+msgstr "Maxmindからダウンロード"
+
+#: admin/includes/tab-settings.php:206
+msgid "Auto updating (once a month)"
+msgstr "自動更新（月1回）"
+
+#: admin/includes/tab-settings.php:225
+msgid "Submission settings"
+msgstr "投稿時の設定"
+
+#: admin/includes/tab-settings.php:233
+msgid "Text message on comment form"
+msgstr "投稿フォーム上のテキスト・メッセージ"
+
+#: admin/includes/tab-settings.php:244
+msgid "None"
+msgstr "なし"
+
+#: admin/includes/tab-settings.php:245
+msgid "Top"
+msgstr "上部"
+
+#: admin/includes/tab-settings.php:246
+msgid "Bottom"
+msgstr "下部"
+
+#: admin/includes/tab-settings.php:255
+msgid "Matching rule"
+msgstr "マッチング規則"
+
+#: admin/includes/tab-settings.php:265
+msgid "White list"
+msgstr "ホワイトリスト"
+
+#: admin/includes/tab-settings.php:266
+msgid "Black list"
+msgstr "ブラックリスト"
+
+#: admin/includes/tab-settings.php:274
+#, php-format
+msgid "White list %s"
+msgstr "ホワイトリスト %s"
+
+#: admin/includes/tab-settings.php:283 admin/includes/tab-settings.php:299
+msgid "(comma separated)"
+msgstr "（カンマ区切り）"
+
+#: admin/includes/tab-settings.php:290
+#, php-format
+msgid "Black list %s"
+msgstr "ブラックリスト %s"
+
+#: admin/includes/tab-settings.php:306
+#, php-format
+msgid "Response code %s"
+msgstr "レスポンスコード %s"
+
+#: admin/includes/tab-settings.php:338
+msgid "Cache settings"
+msgstr "キャッシュの設定"
+
+#: admin/includes/tab-settings.php:346
+msgid "Number of entries"
+msgstr "最大保持数"
+
+#: admin/includes/tab-settings.php:361
+msgid "Expiration time [sec]"
+msgstr "有効時間 [sec]"
+
+#: admin/includes/tab-settings.php:379
+msgid "Plugin settings"
+msgstr "プラグインの設定"
+
+#: admin/includes/tab-settings.php:387
+msgid "Save statistics"
+msgstr "統計情報を記録"
+
+#: admin/includes/tab-settings.php:402
+msgid "Remove settings at uninstallation"
+msgstr "アンインストール時に設定を削除"
+
+#: admin/includes/tab-statistics.php:18
+msgid "Statistics of posts"
+msgstr "投稿の統計"
+
+#: admin/includes/tab-statistics.php:26
+msgid "Passed"
+msgstr "通過"
+
+#: admin/includes/tab-statistics.php:41
+msgid "Blocked"
+msgstr "遮断"
+
+#: admin/includes/tab-statistics.php:56
+msgid "Unknown (blocked)"
+msgstr "国不明（遮断）"
+
+#: admin/includes/tab-statistics.php:77
+msgid "Blocked by countries"
+msgstr "国別遮断回数"
+
+#: admin/includes/tab-statistics.php:92
+msgid "Blocked by type of IP address"
+msgstr "遮断したIPアドレスのタイプ"
+
+#: admin/includes/tab-statistics.php:110
+msgid "Name of API"
+msgstr "API名"
+
+#: admin/includes/tab-statistics.php:111
+msgid "Calls"
+msgstr "リクエスト回数"
+
+#: admin/includes/tab-statistics.php:112
+msgid "Response [msec]"
+msgstr "応答時間 [msec]"
+
+#: admin/includes/tab-statistics.php:125
+msgid "Average response time of each API"
+msgstr "API毎の平均応答時間"
+
+#: admin/includes/tab-statistics.php:143
+msgid "Statistics of cache"
+msgstr "キャッシュの統計"
+
+#: admin/includes/tab-statistics.php:151
+msgid "Country code"
+msgstr "国コード"
+
+#: admin/includes/tab-statistics.php:152
+msgid "Elapsed [sec] / Calls"
+msgstr "経過時間 [sec] / 回数"
+
+#: admin/includes/tab-statistics.php:174
+msgid "IP address in cache"
+msgstr "キャッシュ中のIPアドレス"
+
+#: admin/includes/tab-statistics.php:189
+msgid "Clear statistics"
+msgstr "統計のクリア"
+
+#: admin/includes/tab-statistics.php:197
+msgid "Clear now"
+msgstr "今すぐクリア"
+
+#: classes/class-ip-geo-block.php:401
+msgid "Sorry, but you cannot be accepted."
+msgstr "申し訳ありませんが、受け付けられません。"
+
+#: includes/download.php:92
+#, php-format
+msgid "Cannot open %s to read."
+msgstr "%s を読み込めません。"
+
+#: includes/download.php:101
+#, php-format
+msgid "Cannot open %s to write."
+msgstr "%s に書き込めません。"
